--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+---
+title: "Welcome to my blog"
+date: 2020-06-09
+---
 title: Your awesome title
 author: Lexi Roshkovan
 email: lroshkovan@ebnet.org
