--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-title: Welcome to my blog
+---
+title: "Welcome to my blog"
 date: 2020-06-09
+---
 
-title: Your awesome title
+title: "Welcome to my blog"
 author: Lexi Roshkovan
 email: lroshkovan@ebnet.org
 description: > # this means to ignore newlines until "baseurl:"
